# Mallas3D

./: CMakeLists.txt  ColorMesh.hpp  SimpleMesh.hpp  TextureMesh.hpp  meshBoundary.cpp  meshColor.cpp  meshColor2.cpp  meshStatistic.cpp  meshTexture-Dense.cpp  meshTexture-Sparse.cpp  readme.md  tinyply.cpp  tinyply.h  vec3.hpp
mallas/: 01TriangleEquil.off  01TriangleRect.off  02Triangles.off  04Triangles.off  bunny.off  bunny.ply  camelhead.ply  hexagon0.off  hexagon1.off  hexagon2.off  hexagon3.off  knot-hole.off  knot-hole.ply  lion.ply  mannequin.ply  mannequin2.ply  mask2.off  mask2.ply  mask3.ply  texture.mtl
output/: boundary.16Triangles.ply  boundary.16Triangles.txt  boundary.AthenaBust.txt  boundary.Nefertiti.990kv.txt  boundary.angel_kneeling.txt  boundary.knot-hole.ply  boundary.knot-hole.txt  boundary.mannequin.ply  boundary.mannequin.txt  boundary.mask2.ply  boundary.mask2.txt  statistic.AthenaBust.txt  statistic.bunny.ply  statistic.bunny.txt  statistic.mannequin.ply  statistic.mannequin.txt  statistic.mannequin2.ply  statistic.mannequin2.txt  textureDense.16Triangles.UVMesh1.ply  textureDense.16Triangles.UVMesh2.ply  textureDense.16Triangles.laplacian.mat  textureDense.16Triangles.solutionUV.mat  textureDense.16Triangles.txt  textureDense.hexagon1.UVMesh1.ply  textureDense.hexagon1.UVMesh2.ply  textureDense.hexagon1.laplacian.mat  textureDense.hexagon1.solutionUV.mat  textureDense.hexagon1.txt  textureDense.mannequin2.UVMesh1.ply  textureDense.mannequin2.UVMesh2.ply  textureDense.mannequin2.txt  textureDense.mask2.UVMesh1.ply  textureDense.mask2.UVMesh2.ply  textureDense.mask2.txt  textureSparse.hexagon1.UVMesh1.ply  textureSparse.hexagon1.UVMesh2.ply  textureSparse.hexagon1.laplacian.mat  textureSparse.hexagon1.txt  (+6 more)
